--- a/style.css
+++ b/style.css
@@ -1,13 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
---fonte-titulo:Instrument+Serif:ital
---fonte-texto:Quicksand:wght
+:root{
+--fonte-titulo:'Instrument Serif';
+--fonte-texto:'Quicksand';
 --cor-principal:#4A444C;
 --cor-segundaria:#838A89;
---cor-destaque:#C3AA96;#4A444C
+--cor-destaque:#C3AA96;
 --cor-texto:#4A444C;
-
-body{
-    blackground-color: var(--cor-principal);
-    
 }
+body{
+    background-color: var(--cor-principal);
+    color: var (--cor-texto);
+font-family: var (--fonte-texto);
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 100vh;
+}
+.caixa-principal{
+    background-color: var(--cor-principal);
+    width: 90%;
+    max-width: 60%;
+    text-align: center;
+    padding: 20px;
+}
+h1, caixa-perguntas, .caixa-resultados{
+    font-family: var(--fonte-titulo);
+}
+h1{
+    color: var(--cor-destaque);
+}
+button{
+    background-color: var(--cor-segundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-colo 0.3ms;
+}
+button :hover {
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
+}
+.caixa-resultados{
+    display: none;
+}
+.caixa-resultados.mostrar{
+    display: block;
+}
+.caixa-alternativas{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+    
