--- a/style.css
+++ b/style.css
@@ -10,35 +10,35 @@
 }
 body{
     background-color: var(--cor-principal);
-    color: var (--cor-texto);
-font-family: var (--fonte-texto);
-display: flex;
-justify-content: center;
-align-items: center;
-min-height: 100vh;
+    color: var(--cor-texto);
+    font-family: var(--fonte-texto);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 .caixa-principal{
     background-color: var(--cor-principal);
     width: 90%;
-    max-width: 60%;
+    max-width: 600px;
     text-align: center;
     padding: 20px;
 }
-h1, caixa-perguntas, .caixa-resultados{
+h1, .caixa-perguntas, .caixa-resultados{
     font-family: var(--fonte-titulo);
 }
 h1{
     color: var(--cor-destaque);
 }
 button{
-    background-color: var(--cor-segundaria);
+    background-color: var(--cor-secundaria);
     color: var(--cor-texto);
     border: none;
     border-radius: 15px;
     padding: 15px;
-    transition: background-colo 0.3ms;
+    background-color: background-color 0.3s;
 }
-button :hover {
+button:hover{
     background-color: var(--cor-destaque);
     color: var(--cor-principal);
 }
@@ -53,5 +53,3 @@ button :hover {
     flex-direction: column;
     gap: 10px;
 }
-
-    
